--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "http-status-codes": "^2.1.4",
+    "method-override": "^3.0.0",
     "mongoose": "^5.12.2",
     "nodemon": "^2.0.7"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/isaiahhaley0/Web_Development_Project.git"
