--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.12.2",
     "nodemon": "^2.0.7",
-    "request": "^2.88.2",
     "passport": "^0.4.1",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "request": "^2.88.2"
   },
   "repository": {
     "type": "git",
